--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/anushaodilzoda/Project#readme",
   "dependencies": {
+    "alert-node": "^3.0.6",
     "express": "^4.17.1",
     "mysql2": "^2.1.0",
+    "node-localstorage": "^2.1.5",
     "sequelize": "^5.21.5"
   }
 }
